iac/layer-services/kube-prometheus/alertmanager-k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-k8s-ing
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    traffic-type: internal
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /alertmanager
        backend:
          serviceName: alertmanager-operated
          servicePort: 9093
