iac/layer-services/kube-prometheus/prometheus-k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s-ui-ing
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  labels:
    traffic-type: internal
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus-operated
          servicePort: 8080
